kubernetes/nvr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nvr-frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nvr-frigate
  template:
    metadata:
      labels:
        app: nvr-frigate
    spec:
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:stable
          ports:
            - containerPort: 5000
            - containerPort: 8554
            - containerPort: 8555
              protocol: TCP
            - containerPort: 8555
              protocol: UDP
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: config-volume
              mountPath: /config/config.yml
              subPath: config.yml
            - name: tmp-cache
              mountPath: /tmp/cache
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: config-volume
          emptyDir: { }
        - name: tmp-cache
          emptyDir:
            medium: Memory
            sizeLimit: "8Gi"
