kubernetes/nvr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nvr-service
  namespace: nvr
  labels:
    app: nvr-service
  annotations:
    metallb.universe.tf/address-pool: address-pool
    metallb.universe.tf/loadBalancerIPs: 10.0.10.5
spec:
  selector:
    app: nvr-frigate
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: rtsp
      protocol: TCP
      port: 8554
      targetPort: 8554
    - name: WebRTC TCP
      protocol: TCP
      port: 8555
      targetPort: 8555
    - name: WebRTC UDP
      protocol: UDP
      port: 8555
      targetPort: 8555
  type: LoadBalancer
